Updated comment for Java 21. Accept system properties for verbose and various durations.